--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.42.1",
-        "sass-loader": "^8.0.0",
-        "vue": "^2.6.14",
-        "vue-template-compiler": "^2.6.14"
+        "sass-loader": "^8.0.0"
     },
     "dependencies": {
         "mongodb": "^4.1.3",
